force-app/main/default/objects/Resource__c/fields/Available_Days_For_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>Available_Days_For_Maternity_Leave__c</fullName>
    <label>Available Days For Maternity Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>