force-app/main/default/objects/Resource__c/fields/Available_Days_For_Sickleave_WTH_Doc__c.field-meta.xml
<CustomField>
    <fullName>Available_Days_For_Sickleave_WTH_Doc__c</fullName>
    <inlineHelpText>Sickleave without documents</inlineHelpText>
    <label>Available Days For Sickleave WTH Doc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>