force-app/main/default/objects/Resource__c/fields/Available_Sickleave_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Sickleave_Days__c</fullName>
    <label>Available Sickleave Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>