force-app/main/default/objects/Resource__c/fields/Available_Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Vacation_Days__c</fullName>
    <label>Available Vacation Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>