force-app/main/default/objects/Resource__c/fields/Have_Children__c.field-meta.xml
<CustomField>
    <fullName>Have_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Children</label>
    <type>Checkbox</type>
</CustomField>