force-app/main/default/objects/Resource__c/fields/Is_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resource</label>
    <type>Checkbox</type>
</CustomField>