force-app/main/default/objects/Resource__c/fields/Max_Days_For_Maternity_Leave__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_For_Maternity_Leave__c</fullName>
    <label>Max Days For Maternity Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>