force-app/main/default/objects/Resource__c/fields/Max_Days_For_Sickleave_WTH_Doc__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_For_Sickleave_WTH_Doc__c</fullName>
    <label>Max Days For Sickleave WTH Doc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>