force-app/main/default/objects/Resource__c/fields/Max_Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Vacation_Days__c</fullName>
    <label>Max Vacation Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>