force-app/main/default/objects/Resource__c/fields/Primary_Expertize__c.field-meta.xml
<CustomField>
    <fullName>Primary_Expertize__c</fullName>
    <label>Primary Expertize</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expertize</valueSetName>
    </valueSet>
</CustomField>