force-app/main/default/objects/Resource__c/listViews/Active_Resources.listView-meta.xml
<ListView>
    <fullName>Active_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Resource_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Resources</label>
</ListView>