force-app/main/default/objects/Resource__c/listViews/Backend_Resources.listView-meta.xml
<ListView>
    <fullName>Backend_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>lessOrEqual</operation>
        <value>Backend Development</value>
    </filters>
    <label>Backend Resources</label>
</ListView>