force-app/main/default/objects/Resource__c/listViews/C_Resources.listView-meta.xml
<ListView>
    <fullName>C_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>C# Resources</label>
</ListView>