force-app/main/default/objects/Resource__c/listViews/Java_Resources.listView-meta.xml
<ListView>
    <fullName>Java_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Primary_Expertize__c</field>
        <operation>equals</operation>
        <value>Java</value>
    </filters>
    <label>Java Resources</label>
</ListView>