force-app/main/default/objects/Resource__c/listViews/Junior_Resources.listView-meta.xml
<ListView>
    <fullName>Junior_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Junior</value>
    </filters>
    <label>Junior Resources</label>
</ListView>