force-app/main/default/objects/Resource__c/listViews/North_America_Resources.listView-meta.xml
<ListView>
    <fullName>North_America_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>North America</value>
    </filters>
    <label>North America Resources</label>
</ListView>