force-app/main/default/objects/Resource__c/listViews/Senior_Resources.listView-meta.xml
<ListView>
    <fullName>Senior_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Senior</value>
    </filters>
    <label>Senior Resources</label>
</ListView>